--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "pouchdb-adapter-leveldb": "^6.4.3",
     "protocol-buffers": "^4.0.4",
     "protocol-buffers-schema": "^3.3.2",
+    "pumpify": "^1.5.1",
     "rxdb": "^7.6.1",
     "rxjs": "^6.2.1",
+    "through2": "^2.0.3",
     "uuid": "^3.2.1"
   }
 }
