--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.10",
     "moo": "^0.4.3",
     "nearley": "^2.13.0",
+    "pascal-case": "^2.0.1",
     "pouchdb-adapter-leveldb": "^6.4.3",
     "protocol-buffers": "^4.0.4",
     "protocol-buffers-schema": "^3.3.2",
