--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "async-each": "^1.0.1",
     "call-me-maybe": "^1.0.1",
     "codecs": "^1.2.1",
+    "debug": "^3.1.0",
     "duplexify": "^3.6.0",
     "grpc": "^1.12.4",
     "hyper-graph-db": "^0.3.4",
