--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "async-each": "^1.0.1",
     "call-me-maybe": "^1.0.1",
     "codecs": "^1.2.1",
+    "dat-encoding": "^5.0.1",
     "debug": "^3.1.0",
     "duplexify": "^3.6.0",
     "grpc": "^1.12.4",
     "hyper-graph-db": "^0.3.4",
     "inherits": "^2.0.3",
     "lodash": "^4.17.10",
+    "mali": "^0.8.2",
     "moo": "^0.4.3",
     "nearley": "^2.13.0",
     "pascal-case": "^2.0.1",
@@ -55,6 +57,7 @@
     "rxjs": "^6.2.1",
     "subhyperdb": "^1.0.5",
     "through2": "^2.0.3",
+    "tmp-promise": "^1.0.5",
     "uuid": "^3.2.1"
   },
   "standard": {
