--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dat-encoding": "^5.0.1",
     "debug": "^3.1.0",
     "duplexify": "^3.6.0",
+    "fast-deep-equal": "^2.0.1",
     "grpc": "^1.12.4",
     "hyper-graph-db": "^0.3.4",
     "inherits": "^2.0.3",
