Triggers push data (no selectors yet

--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "grpc": "^1.12.4",
     "hyper-graph-db": "^0.3.4",
     "inherits": "^2.0.3",
+    "json5": "^1.0.1",
     "lodash": "^4.17.10",
+    "lodash.debounce": "^4.0.8",
     "mali": "^0.8.2",
     "moo": "^0.4.3",
     "nearley": "^2.13.0",
