First pass at Bytes

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "protocol-buffers-schema": "^3.3.2",
     "pump": "^3.0.0",
     "pumpify": "^1.5.1",
+    "rabin": "^1.6.0",
     "rxdb": "^7.6.1",
     "rxjs": "^6.2.1",
     "shasum": "^1.0.2",
